Correction alignement header

--- a/src/scss/pages/front-page.scss
+++ b/src/scss/pages/front-page.scss
@@ -35,6 +35,8 @@
         font-weight: 400;
         letter-spacing: 1px;
         width: 33vw;
+        text-align: left;
+        line-height:1.8rem;
       }
     }
   }
